--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.24",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.555.0",
+    "mongoose": "^9.0.0",
     "next": "16.0.5",
     "nodemailer": "^7.0.11",
     "react": "19.2.0",
